# PathoARK

./: .gitignore  =1.0.3  README.md  environment.yml  test.ipynb  test.py
Patho-Bench/: .gitignore  README.md  pyproject.toml  requirements.txt
Patho-Bench/advanced_usage/: README.md  run.py  run.sh
Patho-Bench/advanced_usage/configs/: abmil_kwargs.yaml  patch_embeddings_paths.yaml  pooled_embeddings_paths.yaml  tasks.yaml
Patho-Bench/advanced_usage/configs/coxnet/: coxnet.yaml
Patho-Bench/advanced_usage/configs/finetune/: abmil.yaml  gigapath.yaml  threads.yaml  titan.yaml
Patho-Bench/advanced_usage/configs/linprobe/: linprobe.yaml
Patho-Bench/advanced_usage/configs/retrieval/: retrieval.yaml
Patho-Bench/patho_bench/: DatasetFactory.py  ExperimentFactory.py  Pooler.py  Runner.py  SplitFactory.py  TrainableSlideEncoder.py
Patho-Bench/patho_bench/config/: ConfigMixin.py  JSONSaver.py
Patho-Bench/patho_bench/datasets/: BaseDataset.py  CombinedDataset.py  DataSplit.py  LabelDataset.py  PatchEmbeddingsDataset.py  SlideEmbeddingsDataset.py
Patho-Bench/patho_bench/experiments/: BaseExperiment.py  CoxNetExperiment.py  FinetuningExperiment.py  GeneralizabilityExperimentWrapper.py  LinearProbeExperiment.py  RetrievalExperiment.py
Patho-Bench/patho_bench/experiments/utils/: FancyLayers.py  (+5 more)
Patho-Bench/patho_bench/helpers/: GPUManager.py  SpecialDtypes.py
Patho-Bench/patho_bench/optim/: GigaPathOptim.py  NLLSurvLoss.py
Patho-Bench/patho_bench/scripts/: monitor_progress.py  sweep_single_task.py  sweep_single_task.sh
Patho-Bench/tutorial/: tutorial.ipynb
(+295 files in other folders)
