[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patho-bench"
version = "0.0.1"
description = "High-throughput benchmarking for pathology foundation models."
readme = "README.md"
authors = [
    {name = "Andrew Zhang"},
    {name = "Anurag Vaidya"},
    {name = "Guillaume Jaume"}
]
license = {text = "cc-by-nc-nd 4.0"}
requires-python = ">=3.10"
dependencies = [
    "threadpoolctl",
    "scikit-learn",
    "scikit-survival",
    "lovely-tensors",
    "seaborn",
    "datasets==3.6.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["patho_bench*"]

[tool.setuptools.package-data]
pathobench = ["*.md", "*.txt"]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "mypy"
]

[tool.setuptools.dynamic]
readme = {file = "README.md"}

[tool.setuptools.dynamic.dependencies]
file = ["requirements.txt"]
